--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,9 @@
     <title>Document</title>
   </head>
   <body>
-    <a href="index.html">Back to homepage</a>
+    <div class="link">
+      <a href="index.html">Back to homepage</a>
+    </div>
     <h1>Contact bakeries</h1>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo repellat,
@@ -16,6 +18,8 @@
       perspiciatis?
     </p>
 
-    <a href="photo.html">Croissant gallery</a>
+    <div class="link">
+      <a href="photo.html">Croissant gallery</a>
+    </div>
   </body>
 </html>
