--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
     <h1>Welcome to this website about Croissants!</h1>
     <h3>- a french delight</h3>
 
-    <a href="contact.html">Contact a bakery</a>
-    <a href="photo.html">Croissant gallery</a>
+    <div class="link-group">
+      <div class="contact">
+        <a href="contact.html">Contact a bakery</a>
+      </div>
+      <div class="about">
+        <a href="photo.html">Croissant gallery</a>
+      </div>
+    </div>
   </body>
 </html>
