--- a/photo.html
+++ b/photo.html
@@ -7,7 +7,9 @@
     <title>Document</title>
   </head>
   <body>
-    <a href="index.html">Back to homepage</a>
+    <div class="link">
+      <a href="index.html">Back to homepage</a>
+    </div>
     <h1>Croissant gallery</h1>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo repellat,
@@ -16,12 +18,16 @@
       perspiciatis?
     </p>
 
-    <img
-      src="/src/images/kavita-joshi-rai-lE5O9DktAQY-unsplash.jpg"
-      alt=""
-      srcset=""
-    />
+    <div class="image">
+      <img
+        src="/src/images/kavita-joshi-rai-lE5O9DktAQY-unsplash.jpg"
+        alt=""
+        srcset=""
+      />
+    </div>
 
-    <a href="contact.html">Contact bakeries</a>
+    <div class="link">
+      <a href="contact.html">Contact bakeries</a>
+    </div>
   </body>
 </html>
