--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,10 @@
       reiciendis vitae magnam, hic architecto rem eius eaque consectetur
       perspiciatis?
     </p>
+    <p class="contact-message">Contact us below</p>
+    <div class="link-email">
+      <a href="mailto:not-a-real-email@mail.com">not-a-real-email@mail.com</a>
+    </div>
 
     <div class="link">
       <a href="photo.html">Croissant gallery</a>
