--- a/contact.html
+++ b/contact.html
@@ -3,14 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Indulge in the finest selection of freshly baked croissants! Discover a variety of flavors and recipes, from classic buttery to innovative fillings. Perfect for breakfast or a delightful treat. Join our croissant-loving community today!"
+    />
     <link rel="stylesheet" href="/src/web/style.css" />
-    <title>Document</title>
+    <title>Bakeries for your Croissant needs | croissant.com</title>
   </head>
   <body>
     <div class="link">
       <a href="index.html">Back to homepage</a>
     </div>
-    <h1>Contact bakeries</h1>
+    <h1>Contact our bakeries for delicious croissants!</h1>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo repellat,
       magni esse iusto mollitia molestiae facere quae recusandae, est doloribus
@@ -19,7 +23,9 @@
     </p>
     <p class="contact-message">Contact us below</p>
     <div class="link-email">
-      <a href="mailto:not-a-real-email@mail.com">not-a-real-email@mail.com</a>
+      <a href="mailto:not-a-real-email@croissant-bakery.com"
+        >not-a-real-email@croissant-bakery.com</a
+      >
     </div>
 
     <div class="link">
