--- a/photo.html
+++ b/photo.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Indulge in the finest selection of freshly baked croissants! Discover a variety of flavors and recipes, from classic buttery to innovative fillings. Perfect for breakfast or a delightful treat. Join our croissant-loving community today!"
+    />
     <link rel="stylesheet" href="/src/web/style.css" />
-    <title>Document</title>
+    <title>Croissants - a delicious pastry | croissant.com</title>
   </head>
   <body>
     <div class="link">
@@ -12,22 +16,23 @@
     </div>
     <h1>Croissant gallery</h1>
     <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo repellat,
-      magni esse iusto mollitia molestiae facere quae recusandae, est doloribus
-      reiciendis vitae magnam, hic architecto rem eius eaque consectetur
-      perspiciatis?
+      Croissants are made using a technique called lamination, which layers
+      dough and butter for that signature flaky texture. The traditional French
+      recipe for croissants dates back to the 19th century, blending Austrian
+      influences with French baking techniques. Enjoying a freshly baked
+      croissant is a popular breakfast ritual in France, often paired with
+      coffee for the ultimate morning treat!
     </p>
 
     <div class="image">
       <img
         src="/src/images/kavita-joshi-rai-lE5O9DktAQY-unsplash.jpg"
-        alt=""
-        srcset=""
+        alt="a picture of Croissants"
       />
     </div>
 
     <div class="link">
-      <a href="contact.html">Contact bakeries</a>
+      <a href="contact.html">Contact bakeries for delicious Croissants!</a>
     </div>
   </body>
 </html>
