--- a/index.html
+++ b/index.html
@@ -3,16 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Indulge in the finest selection of freshly baked croissants! Discover a variety of flavors and recipes, from classic buttery to innovative fillings. Perfect for breakfast or a delightful treat. Join our croissant-loving community today!"
+    />
     <link rel="stylesheet" href="/src/web/style.css" />
-    <title>Document</title>
+    <title>
+      Croissant - the website for your Croissant needs! | croissant.com
+    </title>
   </head>
   <body>
     <h1>Welcome to this website about Croissants!</h1>
     <h3>- a french delight</h3>
 
+    <p>
+      Did you know that croissants originated from a 13th-century Austrian
+      pastry called kipferl? The iconic crescent shape symbolizes the moon,
+      representing the victory over the Ottoman Empire during the Battle of
+      Vienna in 1683. It wasn’t until the 19th century that croissants made
+      their way to France, where bakers perfected the flaky texture we adore
+      today. Authentic French croissants are crafted through a meticulous
+      layering process of butter and dough, creating that irresistible
+      flakiness. Enjoying a warm croissant with a café au lait is a beloved
+      French breakfast tradition, making it the perfect start to your day!
+    </p>
+
     <div class="link-group">
       <div class="contact">
-        <a href="contact.html">Contact a bakery</a>
+        <a href="contact.html">Contact a bakery for delicious Croissants</a>
       </div>
       <div class="about">
         <a href="photo.html">Croissant gallery</a>
